# SIREN

./: .gitignore  ADAPTATION_GUIDE.md  README.md  add_more_commits.sh  analyze_cond.py  analyze_model_footprint.py  check_stats.py  debug_dataset.py  debug_dataset_splits.py  inference_diffusion_vocoder.py  inference_simple.py  inspect_checkpoint.py  mos_results.csv  plot_training_loss.py  precompute_diffusion_dataset.py  pyproject.toml  resume_multispeaker.py  resume_training.py  run_adaptation.sh  run_compression.py  run_inference_v2.py  setup_git_repo.sh  task_backup.md  test_bitnet_full.py  test_bitnet_vocoder.py  test_diffusion_enhancement.py  train_bitnet.py  train_diffusion_bitnet.py  train_multispeaker.py  train_sub100bps.py  train_vocoder_finetune.py  training_log_antibanding.txt  visualize_intermediate_epoch.py
checkpoints/: tiny_hubert_best.pt  tiny_hubert_epoch0.pt  tiny_hubert_epoch1.pt  tiny_hubert_epoch10.pt  tiny_hubert_epoch2.pt  tiny_hubert_epoch5.pt  tiny_hubert_latest.pt
configs/: finetune_correct.yaml
scripts/: compress.py  decompress.py  download_libritts.py  forward_ports.sh  infer_sample.py  inference_v2.py  inspect_checkpoint.py  measure_mos.py  monitor_mos.py  optimize_dataset.py  precompute_features.py  precompute_vocoder_features.py  preprocess_augmentation_v2.py  rangecoder_draft.py  setup_and_train.sh  setup_and_train_v2.sh  train_bitvocoder_stft.py  train_e2e_encoder_v2.py  train_flow_finetune.py  train_microhubert.py  train_v2.py
ultra_low_bitrate_codec/: decode_l1_bin.py  decode_l1_gz.py  download_data.py  evaluate_quality.py  train.py  (+22 more)
(+585 files in other folders)
