[project]
name = "ultra-low-bitrate-codec"
version = "0.1.0"
description = "Ultra-low bitrate speech codec (~68 bps)"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "transformers>=4.30.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "soundfile>=0.12.0",
    "einops>=0.6.0",
    "protobuf>=4.0.0",
    "matplotlib>=3.7.0",
    "datasets>=4.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ultra_low_bitrate_codec"]
